fix(color-system): use contrast-wcag function instead of explicit contrst colors

--- a/packages/default/scss/filemanager/_layout.scss
+++ b/packages/default/scss/filemanager/_layout.scss
@@ -227,7 +227,7 @@
         align-items: center;
     }
     .k-filemanager-drag-hint .k-icon {
-        margin-right: $filemanager-drag-hint-icon-spacing;
+        margin-right: $icon-spacing;
     }
 
 }
